# Distance_Education

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  secondwindow.cpp  secondwindow.h  secondwindow.ui
